Added TimeManager, TimelineManager and FlowGraphManager to handle groups of related data and ui classes Added FloatTrackNode to animate a float value with timeline Proper FlowGraph::Process implementation

--- a/TODO.txt
+++ b/TODO.txt
@@ -41,6 +41,9 @@ x	- FragmentShader input int not working => Desaturation mode change broken
 # Scanner Node :
 	- Broken right now
 	- Add specific PeakWidget override that shows sensor preset animation
+	
+# Timeline :
+	- Add AddTrackSignal
 
 
 
